Fix some section having wrong height

--- a/react/src/styles/App.module.scss
+++ b/react/src/styles/App.module.scss
@@ -433,7 +433,10 @@ a {
 
     &--lecture-list {
         flex: 1 1 100%;
+        overflow: hidden;
         margin: 0;
+        margin-bottom: -3px;
+        padding-bottom: 3px;
     }
 
 
@@ -645,6 +648,8 @@ a {
             border-top-left-radius: 0;
             border-top-right-radius: 0;
             flex: 1 1 auto;
+            flex-basis: 0;
+            overflow: hidden;
         }
     }
 
